<resources>
    <string name="app_name">Store Inventory</string>
    <string name="name">Product Name</string>
    <string name="hint_prod_name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="hint_prod_quantity">0</string>
    <string name="price">Price</string>
    <string name="hint_prod_price"> 0.00 </string>
    <string name="image">Image Upload</string>
    <string name="hint_prod_image">Image Upload</string>
    <string name="save">Save</string>
    <string name="orderMore">Order More</string>
    <string name="edit">Edit an item</string>
    <string name="add">Add an item</string>
    <string name="empty_des">Add a product using the create new button at the bottom</string>
</resources>
