<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:paddingRight="15dp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edit_prod_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_prod_name"
                android:inputType="textCapWords"
                android:paddingRight="4dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:paddingRight="50dp"
                android:text="@string/quantity" />
            <!-- quantity field -->
            <ImageButton

                android:id="@+id/down_button"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_down" />

            <EditText
                android:id="@+id/edit_prod_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/hint_prod_quantity" />

            <ImageButton
                android:id="@+id/up_button"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_up" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:paddingRight="75dp"
                android:text="@string/price" />
            <!-- price field -->
            <EditText
                android:id="@+id/edit_prod_price"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:hint="@string/hint_prod_price"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:paddingRight="15dp"
                android:text="@string/image" />

            <!-- Weight field -->
            <ImageButton
                android:id="@+id/edit_prod_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_prod_image"
                android:src="@drawable/ic_note_add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/save" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/order_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:text="@string/orderMore"
                    android:visibility="visible" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>